# AuditorisdConIA

./: app.py  lista de verificación.xlsx  main.py  pyproject.toml
