[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auditorisdconia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "streamlit",
    "google-genai",
    "docling",
    "pypdf",
    "openpyxl",
    "python-docx",
    "python-dotenv",
]

[tool.setuptools]
py-modules = ["app", "main"]
